objects/CEE_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>CEE Account Name</description>
        <formula>Customer_Engagement_Events__r.Primary_Account__r.CRName__c</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agenda_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agenda Item</label>
        <referenceTo>Agenda_Item__c</referenceTo>
        <relationshipLabel>CEE Attendees</relationshipLabel>
        <relationshipName>CEE_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Department__c</fullName>
        <label>Attendee Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Reports_to_CIO__c</fullName>
        <description>Attendee Reports to CIO?  As of 9/17/2015 CIO org = gdiazjr,jkern,manville,kcwu,lperry,vgopalra. Need to change workflow if the reporting changes.</description>
        <label>Attendee Reports to CIO?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Theater__c</fullName>
        <label>Briefing Theater</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Events__c</fullName>
        <label>Customer Engagement &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>CEE Attendees</relationshipLabel>
        <relationshipName>CEE_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Presenter_Agenda_Briefing_Center__c</fullName>
        <formula>TEXT(Presenter__r.Customer_Engagement_Events__r.EBC_CBC_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter Agenda Briefing Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Agenda_End_Time__c</fullName>
        <formula>Presenter__r.Agenda_Item__r.End_Time_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter Agenda End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Agenda_Start_Time__c</fullName>
        <formula>Presenter__r.Agenda_Item__r.Start_Time_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter Agenda Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store the user object of the presenter for mail purpose</description>
        <label>Presenter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEE_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>CEE_Attendee__c</referenceTo>
        <relationshipLabel>CEE Attendees</relationshipLabel>
        <relationshipName>CEE_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_Not_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce User Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CES_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shadow_Approval_Status__c</fullName>
        <label>Shadow Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to PM</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shadow_Approver__c</fullName>
        <description>Field to store the email of the shadow approver</description>
        <label>Shadow Approver</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shadow_Justification__c</fullName>
        <inlineHelpText>Please Enter the Justification for Shadowing here</inlineHelpText>
        <label>Shadow Justification</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shadow_Submitted_Date__c</fullName>
        <label>Shadow Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Presenter</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Shadow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CEE Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEE Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>Template_Presenter_View</fullName>
        <columns>NAME</columns>
        <columns>Agenda_Item__c</columns>
        <columns>Customer_Engagement_Events__c</columns>
        <columns>Salesforce_User__c</columns>
        <columns>Email__c</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Salesforce_User__c</field>
            <operation>equals</operation>
            <value>Eric Pesch</value>
        </filters>
        <label>Template - Presenter View</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>CEE_Attendee_CheckingFor_ValidCEC</fullName>
        <active>true</active>
        <description>Checking when user enter validated cisco email or not when presenter is added.</description>
        <errorConditionFormula>ISBLANK(Salesforce_User__c) &amp;&amp; NOT(ISBLANK(Email__c)) &amp;&amp; (TEXT(Type__c) == 'Presenter') &amp;&amp;  NOT(CONTAINS(Email__c, '@cisco.com')) &amp;&amp; NOT(CONTAINS(Email__c, '@CISCO.COM'))</errorConditionFormula>
        <errorMessage>Please provide valid Cisco email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEE_Attendee_Email_Mandtory_Presenter</fullName>
        <active>true</active>
        <description>Email field is mandatory when type is added as presenter.</description>
        <errorConditionFormula>ISBLANK(Salesforce_User__c) &amp;&amp;  ISBLANK(Email__c) &amp;&amp; (TEXT(Type__c) == 'Presenter')</errorConditionFormula>
        <errorMessage>Email is Mandatory for non SFDC user as a presenter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEE_Attendee_Manual_Or_User</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Salesforce_User__c) &amp;&amp; ISBLANK(Name)</errorConditionFormula>
        <errorMessage>The Attendee needs at least A) a valid Salesforce User or B) valid Name and Email fields in order to be saved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CEE_Attendee_Must_Have_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(TEXT(Type__c)) || ISBLANK(TEXT(Type__c))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>The Attendee must have a type assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shadow_User_Check_Conditions</fullName>
        <active>true</active>
        <description>checks if presenter, salesforce user,Briefing Theater fields are present in order to submit a shadow request</description>
        <errorConditionFormula>AND(OR(ISBLANK(Presenter__c),ISBLANK(Salesforce_User__c), ISPICKVAL(Briefing_Theater__c,''), ISBLANK( Shadow_Justification__c)),ISPICKVAL(Type__c,'Shadow'))</errorConditionFormula>
        <errorMessage>Please Enter all the Mandatory fields to submit the shadow request</errorMessage>
    </validationRules>
</CustomObject>